# SkillDock

./: .gitignore  CONTRIBUTING.md  README.md  agent-demo.mjs  agent-execution-log.json  deploy-step1.mjs  deploy-step2.mjs  deploy-to-devnet.mjs  deployment-results.json  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
contracts/skill-registry/: Anchor.toml
contracts/skill-registry/programs/skill-registry/: Cargo.toml
contracts/skill-registry/programs/skill-registry/src/: lib.rs
docs/: ARCHITECTURE.md  ENGINEERING_LOG.md
protocol/: SAP-1.md
src/: llm-guardian.mjs  merkle-verifier.mjs
src/skills/: alpha-decoder.mjs  rug-shield.mjs  snipe-guard.mjs
tests/: run-tests.mjs
