[package]
name = "skill-registry"
version = "0.1.0"
description = "SkillDock On-Chain Skill Registry - SAP-1 Protocol Implementation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skill_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
